// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorsList ContributorsList Dom structure has not change when error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContributorsList
    contributors={Array []}
    error={true}
    fetching={false}
    getContributors={[Function]}
    repoName="react"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          Contributors list
        </ForwardRef>,
        <ForwardRef>
          <span>
            Ups something went wrong!!
          </span>
        </ForwardRef>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Contributors list",
        },
        "ref": null,
        "rendered": "Contributors list",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": true,
            "rules": Array [
              "
  border-bottom: 1px solid ",
              "#b8b7ad",
              ";
  padding-bottom: 5px;
  text-transform: capitalize;
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <span>
            Ups something went wrong!!
          </span>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Ups something went wrong!!",
          },
          "ref": null,
          "rendered": "Ups something went wrong!!",
          "type": "span",
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-EHOje",
            "isStatic": true,
            "rules": Array [
              "
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  color: ",
              "#b8b7ad",
              ";
  text-transform: uppercase;
  padding: 20px;
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-EHOje",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            Contributors list
          </ForwardRef>,
          <ForwardRef>
            <span>
              Ups something went wrong!!
            </span>
          </ForwardRef>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Contributors list",
          },
          "ref": null,
          "rendered": "Contributors list",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bxivhb",
              "isStatic": true,
              "rules": Array [
                "
  border-bottom: 1px solid ",
                "#b8b7ad",
                ";
  padding-bottom: 5px;
  text-transform: capitalize;
",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-bxivhb",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <span>
              Ups something went wrong!!
            </span>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Ups something went wrong!!",
            },
            "ref": null,
            "rendered": "Ups something went wrong!!",
            "type": "span",
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-EHOje",
              "isStatic": true,
              "rules": Array [
                "
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  color: ",
                "#b8b7ad",
                ";
  text-transform: uppercase;
  padding: 20px;
",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-EHOje",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContributorsList ContributorsList Dom structure has not change when fetching 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContributorsList
    contributors={Array []}
    error={false}
    fetching={true}
    getContributors={[Function]}
    repoName="react"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          Contributors list
        </ForwardRef>,
        <ForwardRef>
          <Spinner
            color="#b8b7ad"
            size={30}
          />
        </ForwardRef>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Contributors list",
        },
        "ref": null,
        "rendered": "Contributors list",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": true,
            "rules": Array [
              "
  border-bottom: 1px solid ",
              "#b8b7ad",
              ";
  padding-bottom: 5px;
  text-transform: capitalize;
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Spinner
            color="#b8b7ad"
            size={30}
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "#b8b7ad",
            "size": 30,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-EHOje",
            "isStatic": true,
            "rules": Array [
              "
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  color: ",
              "#b8b7ad",
              ";
  text-transform: uppercase;
  padding: 20px;
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-EHOje",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            Contributors list
          </ForwardRef>,
          <ForwardRef>
            <Spinner
              color="#b8b7ad"
              size={30}
            />
          </ForwardRef>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Contributors list",
          },
          "ref": null,
          "rendered": "Contributors list",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bxivhb",
              "isStatic": true,
              "rules": Array [
                "
  border-bottom: 1px solid ",
                "#b8b7ad",
                ";
  padding-bottom: 5px;
  text-transform: capitalize;
",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-bxivhb",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Spinner
              color="#b8b7ad"
              size={30}
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#b8b7ad",
              "size": 30,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-EHOje",
              "isStatic": true,
              "rules": Array [
                "
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  color: ",
                "#b8b7ad",
                ";
  text-transform: uppercase;
  padding: 20px;
",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-EHOje",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ContributorsList ContributorsList Dom structure has not change when render contributors 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContributorsList
    contributors={
      Array [
        Object {
          "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
          "contributions": 623,
          "html_url": "https://github.com/shergin",
          "id": 1,
          "login": "shergin",
        },
        Object {
          "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
          "contributions": 510,
          "html_url": "https://github.com/javache",
          "id": 2,
          "login": "javache",
        },
      ]
    }
    error={false}
    fetching={false}
    getContributors={[Function]}
    repoName="react"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          Contributors list
        </ForwardRef>,
        <ForwardRef>
          <ContibutorItem
            contributor={
              Object {
                "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
                "contributions": 623,
                "html_url": "https://github.com/shergin",
                "id": 1,
                "login": "shergin",
              }
            }
          />
          <ContibutorItem
            contributor={
              Object {
                "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
                "contributions": 510,
                "html_url": "https://github.com/javache",
                "id": 2,
                "login": "javache",
              }
            }
          />
        </ForwardRef>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Contributors list",
        },
        "ref": null,
        "rendered": "Contributors list",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": true,
            "rules": Array [
              "
  border-bottom: 1px solid ",
              "#b8b7ad",
              ";
  padding-bottom: 5px;
  text-transform: capitalize;
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ContibutorItem
              contributor={
                Object {
                  "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
                  "contributions": 623,
                  "html_url": "https://github.com/shergin",
                  "id": 1,
                  "login": "shergin",
                }
              }
            />,
            <ContibutorItem
              contributor={
                Object {
                  "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
                  "contributions": 510,
                  "html_url": "https://github.com/javache",
                  "id": 2,
                  "login": "javache",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "contributor": Object {
                "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
                "contributions": 623,
                "html_url": "https://github.com/shergin",
                "id": 1,
                "login": "shergin",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "contributor": Object {
                "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
                "contributions": 510,
                "html_url": "https://github.com/javache",
                "id": 2,
                "login": "javache",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ifAKCX",
            "isStatic": true,
            "rules": Array [
              "
  padding-top: 20px;
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-ifAKCX",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            Contributors list
          </ForwardRef>,
          <ForwardRef>
            <ContibutorItem
              contributor={
                Object {
                  "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
                  "contributions": 623,
                  "html_url": "https://github.com/shergin",
                  "id": 1,
                  "login": "shergin",
                }
              }
            />
            <ContibutorItem
              contributor={
                Object {
                  "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
                  "contributions": 510,
                  "html_url": "https://github.com/javache",
                  "id": 2,
                  "login": "javache",
                }
              }
            />
          </ForwardRef>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Contributors list",
          },
          "ref": null,
          "rendered": "Contributors list",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bxivhb",
              "isStatic": true,
              "rules": Array [
                "
  border-bottom: 1px solid ",
                "#b8b7ad",
                ";
  padding-bottom: 5px;
  text-transform: capitalize;
",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-bxivhb",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ContibutorItem
                contributor={
                  Object {
                    "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
                    "contributions": 623,
                    "html_url": "https://github.com/shergin",
                    "id": 1,
                    "login": "shergin",
                  }
                }
              />,
              <ContibutorItem
                contributor={
                  Object {
                    "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
                    "contributions": 510,
                    "html_url": "https://github.com/javache",
                    "id": 2,
                    "login": "javache",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "contributor": Object {
                  "avatar_url": "https://avatars3.githubusercontent.com/u/22032?v=4",
                  "contributions": 623,
                  "html_url": "https://github.com/shergin",
                  "id": 1,
                  "login": "shergin",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "contributor": Object {
                  "avatar_url": "https://avatars3.githubusercontent.com/u/5676?v=4",
                  "contributions": 510,
                  "html_url": "https://github.com/javache",
                  "id": 2,
                  "login": "javache",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-ifAKCX",
              "isStatic": true,
              "rules": Array [
                "
  padding-top: 20px;
",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-ifAKCX",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
